fix center sponsors on mobile, galery images 100% width of grid cell

--- a/apps/devfest/src/app/components/gallery-section/gallery-section.component.scss
+++ b/apps/devfest/src/app/components/gallery-section/gallery-section.component.scss
@@ -14,10 +14,15 @@
   grid-gap: 2px;
 
   .grid-item {
-    height: 240px;
+    width: 100%;
+    object-fit: cover;
+    height: 260px;
 
     &:nth-child(4) {
-      grid-area: 4 / 3 / 4 / 3;
+      
+      @media (min-width: 640px) {
+        grid-area: 4 / 3 / 4 / 3;
+      }
     }
 
     &:nth-child(5) {
